--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Focado em compras de eBooks sobre receitas e culinárias, veganas e sem glúten!">
     <title>eBooksFácil</title>
-    <link rel="stylesheet" href="ebook-p1.css">
+    <link rel="stylesheet" href="css/ebook-p1.css">
 </head>
 
 <body>
