--- a/ebook-p3.html
+++ b/ebook-p3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="download" content="download do eBook: Culinária e receitas, sem glúten e veganas!">
     <title>Download PDF</title>
-    <link rel="stylesheet" href="ebook-p2.css">
+    <link rel="stylesheet" href="css/ebook-p2.css">
 </head>
 
 <body>
