--- a/ebook-p2.html
+++ b/ebook-p2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="formulario" content="formulario de compras do eBooksFácil">
     <title>Formulário</title>
-    <link rel="stylesheet" href="ebook-p2.css">
+    <link rel="stylesheet" href="css/ebook-p2.css">
 </head>
 
 <body>
