--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             cozinhe suas próximas obras-primas!
         </p>
         <div class="img">
-            <img src="img/comidinha.jpg" height="300" width="470"><br>
+            <img src="img/img_ebook.webp" height="300" width="470"><br>
         </div>
         <br>
         <ul type="square">
